# app.js
@@ -2,6 +2,7 @@ const express = require('express');
 const userController = require('./controller/userController');
 const swaggerUi = require('swagger-ui-express');
 const swaggerDocument = require('./swagger.json');
+const auth = require('./middleware/auth');
 
 const app = express();
 app.use(express.json());
@@ -10,7 +11,7 @@ app.use(express.json());
 app.post('/register', userController.register);
 app.post('/login', userController.login);
 app.get('/users', userController.getUsers);
-app.post('/transfer', userController.transfer);
+app.post('/transfer', auth, userController.transfer);
 
 // Swagger docs
 app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
